# Advanced-Deep-Learning

./: .gitignore
Dive_into_Deep_Learning/: preliminaires.ipynb
TP1/: Pipfile  pyproject.toml
TP1/models/: model.py
TP1/notebooks/: TP_Intro-etu.ipynb
TP1/src/: evaluate.py  train.py
